# shapereality-engine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.yaml
src/: CMakeLists.txt  application.cpp  application.h  application_cocoa.mm  assets.cpp  assets.h  macos_window.cpp  main.cpp  transform_ecs_test.cpp  types.h  view.h  view_cocoa.h  view_cocoa.mm  window.h  window_cocoa.mm  window_new.h  window_new_macos.mm  window_test.h  window_test.mm
src/application/: CMakeLists.txt  README.md  main.cpp
src/assets_test/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  README.md
src/editor/: CMakeLists.txt  README.md  axes.cpp  axes.h  camera_controller.cpp  camera_controller.h  editor.cpp  editor.h  editor_ui.cpp  editor_ui.h  main.cpp  translate_handle.h  types.cpp  types.h  ui.cpp  ui.h
src/editor/asset/: CMakeLists.txt  README.md
src/editor/assets/: CMakeLists.txt
src/editor/handles/: rotate_handle.h  scale_cage_handle.h  scale_handle.h
src/graphics/: CMakeLists.txt  README.md  buffer.h  command_buffer.cpp  command_buffer.h  command_queue.h  device.cpp  device.h  graphics.cpp  graphics.h  input.cpp  input.h  library.h  material.cpp  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  render_pass.cpp  render_pass.h  render_pipeline_state.h  shader.cpp  shader.h  shader_library.h  texture.cpp  texture.h  types.cpp  types.h  window.cpp  window.h  window_cocoa.h  window_cocoa.mm
src/input/: CMakeLists.txt  README.md  input.cpp  input.h  input_cocoa.mm  types.cpp  types.h  types_cocoa.cpp  types_cocoa.h  types_cocoa.mm
src/math/: CMakeLists.txt  README.md  bounds.cpp  bounds.h  bounds.inl  matrix.cpp  matrix.h  matrix.inl  plane.h  plane.inl  quaternion.cpp  quaternion.h  ray.cpp  ray.h  ray.inl  rect.cpp  rect.h  utils.cpp  utils.h  vector.cpp  vector.h  vector.inl  vector2.h
src/modules/: CMakeLists.txt  README.md
src/modules/asset/: CMakeLists.txt  asset_database.cpp  asset_database.h  asset_handle.cpp  asset_handle.h  asset_id.cpp  asset_id.h  asset_info.h  asset_info_registry.cpp  asset_info_registry.h  asset_type.cpp  asset_type.h  asset_type_registry.cpp  asset_type_registry.h  design.md  import_registry.cpp  import_registry.h  reflection.cpp  reflection.h  register.cpp  register.h  source_directory.cpp  source_directory.h
src/modules/assets/: CMakeLists.txt  asset_database.cpp  asset_database.h  assets_source_directory.cpp  assets_source_directory.h  assets_testing.cpp  importer_registry.cpp  importer_registry.h  reflection.h  source_directory.cpp  source_directory.h
src/modules/common/: CMakeLists.txt  application_info.cpp  application_info.h  log.cpp  log.h  logger.cpp  logger.h  observers.h  promise.h  result.cpp  result.h  thread_pool.cpp  thread_pool.h
src/modules/entity/: CMakeLists.txt  config.h  design.md  entity_registry.h  reflection.cpp  reflection.h  register.cpp  register.h  registry.h  serialization.h  serialize.h  sparse_set.h  type.cpp  type.h  view.h
src/modules/graphics/: CMakeLists.txt  application.cpp  application.h  buffer.cpp  buffer.h  command_buffer.h  command_queue.h  device.h  graphics.cpp  graphics.h  input.cpp  input.h  register.cpp  register.h  render_pass.h  render_pipeline_state.h  shader.cpp  shader.h  texture.h  types.h  window.cpp  window.h
src/modules/import/: CMakeLists.txt
src/modules/input/: CMakeLists.txt  input.cpp  input.h  input_handler.cpp  input_handler.h
src/modules/math/: CMakeLists.txt  bounds.h  bounds.inl  config.h  matrix.h  matrix.inl  plane.h  plane.inl  quaternion.h  quaternion.inl  ray.cpp  ray.h  ray.inl  rect.cpp  rect.h  utility.h  vector.h  vector.inl
src/modules/reflection/: CMakeLists.txt  class.cpp  class.h  class_info.h  enum.cpp  enum.h  enum_info.h  iterate.h  json.cpp  json.h  reflection.cpp  reflection.h  reflection_friend.h  register.h  type_id.h  type_info.cpp  type_info.h  type_info_registry.cpp  type_info_registry.h  type_registry.cpp  type_registry.h  unique_any_pointer.cpp  unique_any_pointer.h
src/modules/renderer/: CMakeLists.txt  asset.h  camera.cpp  camera.h  imgui.h  imgui_backend.cpp  imgui_backend.h  imgui_implementation.cpp  imgui_implementation.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_renderer.h  reflection.cpp  reflection.h  register.cpp  register.h  render_graph.cpp  render_graph.h  scene.cpp  scene.h  scene_renderer.cpp  scene_renderer.h  shader.cpp  (+3 more)
src/platform/: README.md  android.h  ios.h  macos.h  platform.h  unix.h  windows.h
src/renderer/: CMakeLists.txt  buffer.cpp  buffer.h  camera.cpp  camera.h  command_buffer.cpp  command_buffer.h  graphics.cpp  graphics.h  material.cpp  material.h  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  render_pass.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.h  window.cpp  window.h  window_cocoa.h  window_cocoa.mm
src/runtime/: CMakeLists.txt  README.md
src/scene/: component.cpp  component.h  layer.h  object.cpp  object.h  scene.cpp  scene.h  transform.cpp  transform.h
test/: CMakeLists.txt
test/entity/: hierarchy.cpp  registry.cpp  sparse_set.cpp  view.cpp
test/graphics/: anonymous_union_test.cpp
test/math/: matrix.cpp  ray.cpp  vector.cpp
tests/: CMakeLists.txt  scratch_pad.cpp
tests/asset/: asset_database.cpp  asset_handle_any.cpp  async.cpp  async_2.cpp  char.cpp  copy_import_result.cpp  handles.cpp  move_import_result_data.cpp  tests.cpp  thread_pool.cpp  thread_pool_v2.cpp
tests/entity/: hierarchy.cpp  registry.cpp  serialize_registry.cpp  sparse_set.cpp  view.cpp
tests/input/: types.cpp
tests/math/: initializer.cpp  math_tests.cpp  matrix.cpp  neneng.cpp  quaternion.cpp  test.cpp  vector.cpp
tests/random_things/: goto_fun.cpp  scratch_pad.cpp
tests/reflection/: binary_json_hybrid.cpp  enum.cpp  enum_info.cpp  graph_based_reflection.cpp  graph_based_reflection_json.cpp  graph_based_reflection_values.cpp  json.cpp  node_recurse.cpp  polymorphism.cpp  polymorphism_2.cpp  polymorphism_3.cpp  reflection_prototype.cpp  reflection_prototype2.cpp  type_info.cpp  unique_any.cpp  vector.cpp  vector_prototype2.cpp
(+324 files in other folders)
